--- a/test/source/index.html
+++ b/test/source/index.html
@@ -1,93 +1,80 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Test Page</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Proxy</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f8f8f8;
+      text-align: center;
+    }
 
-<!-- standard links -->
-<link rel="stylesheet" href="http://example.com/styles.css"/>
-<link rel="stylesheet" href="https://example.com/styles.css"/>
-<link rel="stylesheet" href="//example.com/styles.css"/>
-<link rel="stylesheet" href="/styles.css"/>
-<link rel="stylesheet" href="styles.css"/>
+    header {
+      background-color: #4285F4;
+      color: white;
+      padding: 20px 0;
+    }
 
-<!-- single quotes -->
-<link rel="stylesheet" href='http://example.com/styles.css'/>
-<link rel="stylesheet" href='https://example.com/styles.css'/>
-<link rel="stylesheet" href='//example.com/styles.css'/>
-<link rel="stylesheet" href='/styles.css'/>
-<link rel="stylesheet" href='styles.css'/>
+    header h1 {
+      margin: 0;
+    }
 
-<!-- no quotes -->
-<link rel="stylesheet" href=http://example.com/styles.css />
-<link rel="stylesheet" href=https://example.com/styles.css />
-<link rel="stylesheet" href=//example.com/styles.css />
-<link rel="stylesheet" href=/styles.css />
-<link rel="stylesheet" href=styles.css />
+    .search-container {
+      margin-top: 50px;
+    }
 
-<style type="text/css">
-.bg1 { background: url(http://example.com/img.jpg); }
-.bg2 { background: url(https://example.com/img.jpg); }
-.bg3 { background: url(//example.com/img.jpg); }
-.bg4 { background: url(/img.jpg); }
-.bg5 { background: url(img.jpg); }
+    .search-container input[type="text"] {
+      width: 60%;
+      padding: 12px;
+      font-size: 18px;
+      border-radius: 25px;
+      border: 1px solid #ccc;
+      margin-right: 10px;
+    }
 
-.bg1 { background: url('http://example.com/img.jpg'); }
-.bg2 { background: url('https://example.com/img.jpg'); }
-.bg3 { background: url('//example.com/img.jpg'); }
-.bg4 { background: url('/img.jpg'); }
-.bg5 { background: url('img.jpg'); }
+    .search-container button {
+      padding: 12px 25px;
+      font-size: 18px;
+      background-color: #4285F4;
+      color: white;
+      border: none;
+      border-radius: 25px;
+      cursor: pointer;
+    }
 
-.bg1 { background: url("http://example.com/img.jpg"); }
-.bg2 { background: url("https://example.com/img.jpg"); }
-.bg3 { background: url("//example.com/img.jpg"); }
-.bg4 { background: url("/img.jpg"); }
-.bg5 { background: url("img.jpg"); }
+    .search-container button:hover {
+      background-color: #357ae8;
+    }
 
-.bg1 { background: url( http://example.com/img.jpg ); }
-.bg2 { background: url( https://example.com/img.jpg ); }
-.bg3 { background: url( //example.com/img.jpg ); }
-.bg4 { background: url( /img.jpg ); }
-.bg5 { background: url( img.jpg ); }
-
-.bg1 { background: url( 'http://example.com/img.jpg' ); }
-.bg2 { background: url( 'https://example.com/img.jpg' ); }
-.bg3 { background: url( '//example.com/img.jpg' ); }
-.bg4 { background: url( '/img.jpg' ); }
-.bg5 { background: url( 'img.jpg' ); }
-
-.bg1 { background: url( "http://example.com/img.jpg" ); }
-.bg2 { background: url( "https://example.com/img.jpg" ); }
-.bg3 { background: url( "//example.com/img.jpg" ); }
-.bg4 { background: url( "/img.jpg" ); }
-.bg5 { background: url( "img.jpg" ); }
-
-.bg4 { background: url(   "/img.jpg"   ); }
-.bg4 { background: url( "/img.jpg"  ); }
-</style>
-
-<script src="http://example.com/scripts.js"></script>
-<script src="https://example.com/scripts.js"></script>
-<script src="//example.com/scripts.js"></script>
-<script src="/scripts.js"></script>
-<script src="scripts.js"></script>
-
-<script src='http://example.com/scripts.js'></script>
-<script src='https://example.com/scripts.js'></script>
-<script src='//example.com/scripts.js'></script>
-<script src='/scripts.js'></script>
-<script src='scripts.js'></script>
-
-<script src=http://example.com/scripts.js></script>
-<script src=https://example.com/scripts.js></script>
-<script src=//example.com/scripts.js></script>
-<script src=/scripts.js></script>
-<script src=scripts.js></script>
+    footer {
+      position: absolute;
+      bottom: 10px;
+      width: 100%;
+      font-size: 12px;
+      color: #888;
+    }
+  </style>
 </head>
 <body>
 
-<a href="/site/http/page.html">link with "http" in the url</a>
-<a href="/site/https/page.html">link with "https" in the url</a>
-<a href="http://localhost:8080">link with port number</a>
+  <header>
+    <h1>Welcome to My Proxy</h1>
+  </header>
+
+  <div class="search-container">
+    <form method="GET" action="/">
+      <input type="text" name="url" placeholder="Enter a website URL" required />
+      <button type="submit">Go</button>
+    </form>
+  </div>
+
+  <footer>
+    <p>Proxy Service - <a href="https://github.com/nfriedly/node-unblocker" target="_blank">Node Unblocker</a></p>
+  </footer>
 
 </body>
 </html>
